[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "requests>=2.32.4",
    "werkzeug>=3.1.3",
]
